--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
-li {
-    
+.active {
+    background-color: bisque;
+}
+
+li{
+    margin-bottom: 10px;
+    border-bottom: 2px solid black
 }
